@@ -1,7 +1,8 @@
 -------------------------------------
 	4.2-6
 -------------------------------------
-
+Fixed bug where deleting or renaming a VM snapshot may not cause
+the chooser to refresh VM data.
 
 -------------------------------------
 	4.2-5	2013-07-11
